2026-02-10T02:52:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21849783094 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21] / []

2026-02-08T03:14:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21791396410 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-07T02:31:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772658125 # 870
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-22] / []

2026-02-06T02:35:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21736578776 # 869