@@ -1,3 +1,12 @@
+2026-02-11T02:49:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890873849 # 874
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
+* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-10T02:52:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21849783094 # 873
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
